--- a/TuLibroWeb/recursos/css/estilo.css
+++ b/TuLibroWeb/recursos/css/estilo.css
@@ -1,5 +1,5 @@
 ﻿#banner{
-    margin-right : 534px;
+    margin-right : 521px;
     margin-bottom : 10px;
     margin-top : 10px;
 }
@@ -10,7 +10,7 @@
     margin-top : 10px;
     margin-left : 5px;
     margin-right : 10px;
+    width : 125px;
+    height : 30px;
     text-align : center;
 }
-
-
