--- a/TuLibroWeb/recursos/css/estilo.css
+++ b/TuLibroWeb/recursos/css/estilo.css
@@ -1,16 +1,38 @@
 ﻿#banner{
-    margin-right : 521px;
     margin-bottom : 10px;
     margin-top : 10px;
 }
 
+#contenedorBotonesBanner 
+{
+    margin-left : 200px;
+    margin-bottom: 30px;
+}
+
+#header 
+{
+}
+
+#barraIzquierda 
+{
+    position : relative;
+    bottom : 20;
+    left : 5;
+}
+
+#centro 
+{
+    width : 200px;
+}
+
 .bannerButton 
 {
-    margin-bottom : 10px;
-    margin-top : 10px;
+    border-spacing : 10px;
     margin-left : 5px;
     margin-right : 10px;
+    margin-bottom : 10px;
     width : 125px;
     height : 30px;
     text-align : center;
 }
+
