--- a/TuLibroWeb/PaginaMaestra.Master
+++ b/TuLibroWeb/PaginaMaestra.Master
@@ -10,72 +10,43 @@
     <link rel="Stylesheet" type="text/css" href="recursos/css/estilo.css" />
 </head>
 <body>
-    <center>
-        <form id="form1" runat="server">
-            <div id="header">
-                <span id="contenedorBanner">
-                    <img id="banner" src="recursos/imagenes/banner_transparente.png" alt="Banner de la pagina" onclick="return banner_onclick()" />
-                </span>
-                <span id ="contenedorBotonesBanner">
-                    <asp:ContentPlaceHolder ID="botonesBanner" runat="server">
-                        <asp:Button ID="btnInicioSesion" class="bannerButton" runat="server" 
-                            Text="Iniciar Sesión" />
-                        <asp:Button ID="btnSuCuenta" class="bannerButton" runat="server" Text="Su Cuenta" />
-                        <asp:Button ID="btnCarrito" class="bannerButton" runat="server" Text="Carrito" Visible="false"/>
-                    </asp:ContentPlaceHolder>
-                </span>
+    <form id="form1" runat="server">
+        <div id="header">
+            <span id="contenedorBanner">
+                <img id="banner" src="recursos/imagenes/banner_transparente.png" alt="Banner de la pagina"/>
+            </span>
+            <span id ="contenedorBotonesBanner">
+                <asp:ContentPlaceHolder ID="botonesBanner" runat="server">
+                    <asp:Button ID="btnInicioSesion" class="bannerButton" runat="server" Text="Iniciar Sesión" />
+                    <asp:Button ID="btnSuCuenta" class="bannerButton" runat="server" Text="Su Cuenta" />
+                    <asp:Button ID="btnCarrito" class="bannerButton" runat="server" Text="Carrito" Visible="false"/>
+                </asp:ContentPlaceHolder>
+            </span>
+        </div>
+        <div id="cuerpo">
+            <div id="barraIzquierda" >
+                <asp:ContentPlaceHolder ID="contenidoBarraIzquierda" runat="server">
+                    <p>Esta es la barra Izquierda, no la usaremos
+                       por ahora, pero queda el espacio vacio para
+                       el futuro</p>
+                </asp:ContentPlaceHolder>
             </div>
-            <div id="cuerpo">
-                <span id="barraIzquierda" >
-                    <asp:ContentPlaceHolder ID="contenidoBarraIzquierda" runat="server">
-                        asdasdsasdasd
-                    </asp:ContentPlaceHolder>
-                </span>
-                <span id="centro">
-                    <asp:ContentPlaceHolder ID="contenidoCentro" runat="server">
-                        <h1>Pagina Principal</h1>
-                        <p>Contenido de la pagina.<br />
-                            Poner aqui el cuerpo de la pagina
-                            sea cual sea. 
-                        </p>
-                    </asp:ContentPlaceHolder>
-                </span>
-                <span id="barraDerecha">
-                    <asp:ContentPlaceHolder ID="contenidoBarraDerecha" runat="server">
-                    </asp:ContentPlaceHolder>
-                </span>
+            <div id="centro">
+                <asp:ContentPlaceHolder ID="contenidoCentro" runat="server">
+                    <h1>Pagina Principal</h1>
+                    <p>Contenido de la pagina.
+                        Poner aqui el cuerpo de la pagina
+                        sea cual sea. 
+                    </p>
+                </asp:ContentPlaceHolder>
             </div>
-            <asp:Table runat="server" BorderWidth="3" BorderColor="Black" Width="800px">
-                <asp:TableRow>
-                    <asp:TableCell ColumnSpan="5" Height="60px">
-                        <asp:ContentPlaceHolder ID="Mas_Vendidos" runat="server">
-                            <h1>Libros Mas Vendidos</h1>
-                            <br />
-                            <p>Aqui podriamos colocar onda 3 imagenes de libros.<br />
-                                    onda libros caros  
-                                </p>
-                        </asp:ContentPlaceHolder>
-                    </asp:TableCell>                        
-                </asp:TableRow>
-                <asp:TableRow>
-                        
-                </asp:TableRow>
-            </asp:Table>                
-            <asp:Table ID="Table1" runat="server" BorderWidth="3" BorderColor="Black" Width="800px">
-                <asp:TableRow>
-                    <asp:TableCell ColumnSpan="5" Height="60px">
-                        <asp:ContentPlaceHolder ID="Recomendados" runat="server">
-                            <h1>Libros Recomendados</h1>
-                            <br />
-                            <p>Aqui libros recomendados con imagenes igual </p>
-                        </asp:ContentPlaceHolder>
-                    </asp:TableCell>                        
-                </asp:TableRow>
-                <asp:TableRow>
-                        
-                </asp:TableRow>
-            </asp:Table>                
-        </form>
-    </center>
+            <div id="barraDerecha">
+                <asp:ContentPlaceHolder ID="contenidoBarraDerecha" runat="server">
+                    <p>Esta es la barra derecha de la pagina, tampoco se usara
+                       en un inicio, pero queda el espacio para futuros usos.</p>
+                </asp:ContentPlaceHolder>
+            </div>
+        </div>
+    </form>
 </body>
 </html>
