Reposisionamiento de barra SiteMap
-Basicamente le quite las etiquetas span y use una relga CSS para mover
el sitemap y alinearlo con el cuerpo de la pagina.

--- a/TuLibroWeb/PaginaMaestra.Master
+++ b/TuLibroWeb/PaginaMaestra.Master
@@ -23,10 +23,8 @@
             </span>
         </div>
         <div>
-            <span>
-                <asp:SiteMapPath ID="SiteMapPath1" runat="server">
-                </asp:SiteMapPath>
-            </span>
+            <asp:SiteMapPath ID="SiteMapPath1" class="sitemap" runat="server">
+            </asp:SiteMapPath>
         </div>
         <div id="cuerpo">
             <div id="barraIzquierda" >                
