Lista la vista de los Libros
-La vista de los libros ya carga todos los datos al recibir una isbn por
parametro de la URL.
-Agregue un href en la iamgen del banner para poder vovler a la pagina
principal mas facil.
-Agregados href a las imagenes de los libros recomendados en Inicio.aspx
-Agregado mas CSS.

--- a/TuLibroWeb/PaginaMaestra.Master
+++ b/TuLibroWeb/PaginaMaestra.Master
@@ -10,9 +10,8 @@
 </head>
 <body>
     <form id="form1" runat="server">
-        
         <div id="header">
-            <img id="banner" src="recursos/imagenes/banner_transparente.png" alt="Banner de la pagina"/>
+            <a href="Inicio.aspx"><img id="banner" src="recursos/imagenes/banner_transparente.png" alt="Banner de la pagina"/></a>
             <span id ="botonesBanner">
                 <asp:Label ID="lblBienvenida" class="header-label" runat="server" Text="" />
                 <asp:Button ID="btnInicioSesion" class="bannerButton" runat="server" 
