Implementado Buscador de Libros
-Agregada Clase BuscadorLibros para modularizar las operaciones de
busqueda.
-Agregado a la vista inicio la funcionalidad de buscar libros bajo
distintos criterios.
-Por el momento funciona solo "Buscar por palabra clave"

--- a/TuLibroWeb/PaginaMaestra.Master
+++ b/TuLibroWeb/PaginaMaestra.Master
@@ -22,11 +22,11 @@
                 <asp:Button ID="btnCerrarSesion" runat="server" class="bannerButton" Text="CerrarSesion" />
             </span>
         </div>
-        <div>
-            <asp:SiteMapPath ID="SiteMapPath1" class="sitemap" runat="server">
-            </asp:SiteMapPath>
-        </div>
         <div id="cuerpo">
+            <div class="sitemap">
+                <asp:SiteMapPath ID="SiteMapPath1" runat="server">
+                </asp:SiteMapPath>
+            </div>
             <div id="barraIzquierda" >                
                 <asp:ContentPlaceHolder ID="contenidoBarraIzquierda" runat="server">
                     <p>Esta es la barra Izquierda, no la usaremos
