Cambios de Ultimo Minuto
-Agregadas validaciones extra al carro de compras.
-Si se intenta comprar sin estar loggeado el boton redireccion a la
pagina de login.
-El boton cerrar session ahora cierra la session.
-Reducido el stock de los libros de harry potter para demostrar el
sistema de stock.

--- a/TuLibroWeb/PaginaMaestra.Master
+++ b/TuLibroWeb/PaginaMaestra.Master
@@ -19,7 +19,8 @@
                 <asp:Button ID="btnSuCuenta" class="bannerButton" runat="server" 
                 Text="Su Cuenta" onclick="btnSuCuenta_Click" />
                 <asp:Button ID="btnCarrito" class="bannerButton" runat="server" Text="Carrito" onclick="btnCarrito_Click"/>
-                <asp:Button ID="btnCerrarSesion" runat="server" class="bannerButton" Text="CerrarSesion" />
+                <asp:Button ID="btnCerrarSesion" runat="server" class="bannerButton" 
+                Text="CerrarSesion" onclick="btnCerrarSesion_Click" />
             </span>
         </div>
         <div id="cuerpo">
